--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-    "name": "application-name"
+    "name": "MobileHN"
   , "version": "0.0.1"
   , "private": true
   , "dependencies": {
       "express": "2.5.5"
     , "jade": ">= 0.0.1"
+	, "request": ">= 1.0.106"
   }
 }
